@@ -1,3 +1,7 @@
+2007-08-08  Roland McGrath  <roland@redhat.com>
+
+	* elfutils.spec.in (License): Canonicalize.
+
 2007-04-23  Roland McGrath  <roland@redhat.com>
 
 	* elfutils.spec.in: Distribute eu-unstrip.
